# ci-docker-stack

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.warm  README.md  aws_creds.encrypted  codeship-services.yml  codeship-steps.yml  dockercfg.encrypted
template/config-0400-0/: config.cabal
template/config-0400-1/: config.cabal
template/config-0400-2/: config.cabal
template/config-0400-3/: config.cabal
template/config-0400-4/: config.cabal
template/config-0400-5/: config.cabal  stack.yaml
template/config-0400-6/: config.cabal  stack.yaml
template/config-0400-7/: config.cabal
template/config-0600-0/: package.yaml
template/config-0600-1/: package.yaml  stack.yaml
template/config-0718-0/: package.yaml  stack.yaml
template/config-0802-0/: stack.yaml
