name:                config
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             PublicDomain
category:            Meta
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base
  default-language:    Haskell2010
