name:                config
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             PublicDomain
category:            Meta
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:
    aeson-better-errors,
    aeson,
    amazonka-ses,
    amazonka,
    attoparsec,
    base,
    base16-bytestring,
    base64-bytestring,
    bcrypt,
    blaze-builder,
    bytestring,
    case-insensitive,
    conduit,
    containers,
    cookie,
    crockford,
    crypto-api,
    crypto-pubkey-openssh,
    data-default,
    data-dword,
    either,
    email-validate,
    extra,
    free,
    HandsomeSoup,
    HsOpenSSL,
    hspec-wai-json,
    hspec-wai,
    hspec,
    http-client,
    http-conduit,
    http-types,
    hxt,
    iso8601-time,
    jwt,
    lens-aeson,
    lens,
    lucid,
    mime-mail,
    monad-control,
    mtl,
    network-uri,
    postgresql-simple,
    QuickCheck,
    random,
    resource-pool,
    resourcet,
    retry,
    RSA,
    scotty,
    semigroups,
    sqlite-simple,
    text-conversions,
    text,
    time,
    transformers,
    url,
    wai-cors,
    wai-extra,
    wai

  default-language:    Haskell2010
